common/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.org/ssl-services: kubernetes-dashboard
  name: k8s-ingress
  namespace: kube-system
spec:
  rules:
  - host: atl.k8s.az
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
        path: /
  tls:
  - hosts:
    - atl.k8s.az
    secretName: atl.k8s.az-tls
